# semgrep-search-db

./: .gitignore  CHANGELOG.md  README.md  config.yaml  pyproject.toml
.github/workflows/: build.yml  ruff.yml  ui.yml
sgsdb/: __init__.py  base_repo.py  config.py  const.py  database.py  main.py  processor.py  repository.py  rule.py  util.py  validation.py
sgsdb/parsing/: __init__.py  model.py  parallel.py  parser.py  processing.py  statistic.py  validation.py
ui/: index.html  package-lock.json  package.json
ui/src/: App.svelte  app.scss  main.ts  routes.ts
ui/src/assets/: db.json
ui/src/components/collection/: AddToCollectionModal.svelte  CollectionManagement.svelte  CollectionTile.svelte  CreateCollectionModal.svelte  EditCollectionModal.svelte
ui/src/components/dashboard/: Widget.svelte
ui/src/components/layout/: ContentWidth.svelte  FilterPanel.svelte  PageTitle.svelte
ui/src/components/menu/: Item.svelte  Nav.svelte
ui/src/components/repo/: RepositoryTile.svelte
ui/src/components/rule/: Filter.svelte  LanguageList.svelte  RuleContent.svelte  RuleTile.svelte
ui/src/components/run/: SelectionGroup.svelte
ui/src/models/: collection.ts  metadata.ts  repository.ts  rule.ts
ui/src/storage/: cache.ts  client.ts  database.ts  uistate.ts
ui/src/util/: date.ts  languages.ts  runs.ts  severities.ts  statistics.ts  text.ts
ui/src/views/: Collections.svelte  Dashboard.svelte  Repositories.svelte  RuleDetails.svelte  Rules.svelte  RunConfig.svelte  Table.svelte
